These two properties ensure that content is legible by limiting the minimum and maximum widths of an element #403

--- a/boxModel/style.css
+++ b/boxModel/style.css
@@ -39,6 +39,7 @@ body {
 }
 
 #main {
+  margin: 0 auto;
   padding: 40px;
   text-align: center;
   width: 400px;
@@ -73,9 +74,15 @@ p {
   font-size: 16px;
   line-height: 48px;
   padding: 10px 20px;
+  min-width: 200px;
+  max-width: 800px;
+  min-height: 200px;
+  max-height: 300px;
 }
 
 .pull-quote {
+  width: 350px;
+  margin: 0 auto;
 }
 
 .byline {
